# slop-git

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.sh  quickstart.py
src/slop_git/: __init__.py  biometrics.py  cli.py  config.py  git.py  llm.py  prompts.py  vibes.py
tests/: test_offline.py
