[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slop-git"
version = "0.1.0"
description = "Narrative-driven version control. Merge conflicts resolved with empathy, not algorithms."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
live = ["anthropic>=0.20"]
biometric = ["psutil>=5.9"]
dev = ["pytest>=7"]

[project.scripts]
slop-git = "slop_git.cli:main"

[project.urls]
Homepage = "https://github.com/slopstack-labs/slop-git"
Repository = "https://github.com/slopstack-labs/slop-git"
Issues = "https://github.com/slopstack-labs/slop-git/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slop_git"]
